✏ Opts